	(Executable._InitializeParent): Likewise.
	(Executable._InitializeChild): Likewise.
	(Executable._DoParent): Likewise.
	(Executable._GetChildPID): New method.
	(TimeoutExecutable): New class.
	(TimeoutRedirectedExecutable): Likewise.
	* NEWS: Mention TimeoutExecutable.
	* README: Note that Python 2.2 is now required.
	* qm/setup_path.py.in: Reflect Python 2.2 requirement.

	* qm/test/classes/process_target.py (ProcessTarget.RunTest):
	Handle unexpected death of the child process.
	(ProcessTarget.__ReadResults): Likewise.
	
2003-04-12  Mark Mitchell  <mark@codesourcery.com>

	* qm/read_thread.py: Remove.
	* qm/write_thread.py: Likewise.

	* qm/qm.sh: Remove qmtest-remote handling.

2003-03-28  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/classes/process_target.py (ProcessTarget.__init):  Move
	initialization of children to ...
	(ProcessTarget.Start): ... here.
	(ProcessTarget.Stop): Call Target.Stop.

2003-03-27  Mark Mitchell  <mark@codesourcery.com>

	* GNUmakefile.in (.PHONY): Mention more targets.
	(check): Add check-rsh.
	(check-rsh): New target.
	* qm/extension.py (Extension._allow_arg_names_matching_class_vars): New
	variable.
	(get_class_arguments): Use it.
	* qm/test/classes/command.py
	(ExecTest._allow_arg_names_matching_class_vars): Set it.
	(ShellScriptTest._allow_arg_names_matching_class_vars): Likewise.
	* qm/test/classes/rsh_target.py
	(RSHTarget._allow_arg_names_matching_class_vars): Likewise.
	(RSHTarget.__init__): Always set "arguments".
	(RSHTarget._GetInterpreter): Fix thinko.
	* qm/test/doc/reference.xml: Mention the fact that test classes
	should not use fields with the same names as class variables in
	base classes.
	* NEWS: Mention changes.

2003-03-23  Mark Mitchell  <mark@codesourcery.com>

	* qm/common.py (format_traceback): Tweak formatting of generated
	structured text.
	* qm/test/base.py (CouldNotLoadExtensionError): New class.
	(get_extension_class_from_directory): Use it.